--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "disaster-and-dragons",
   "version": "1.0.0",
   "description": "disaster and dragons yay!",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,10 +21,6 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "method-override": "^3.0.0",
-    "nodemon": "^2.0.19",
-    "sequelize": "^6.21.2"
-  },
-  "devDependencies": {
-    "sequelize-cli": "^6.4.1"
+    "nodemon": "^2.0.19"
   }
 }
