--- a/package.json
+++ b/package.json
@@ -18,17 +18,25 @@
   },
   "homepage": "https://github.com/floatingtales/disaster-and-dragons#readme",
   "dependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "html-webpack-plugin": "^5.5.0",
     "method-override": "^3.0.0",
-    "mongoose": "^6.4.4"
+    "mini-css-extract-plugin": "^2.6.1",
+    "mongoose": "^6.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "webpack": "^5.73.0",
+    "webpack-dev-middleware": "^5.3.3",
+    "webpack-hot-middleware": "^2.25.1",
+    "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
@@ -38,19 +46,11 @@
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.1",
     "nodemon": "^2.0.19",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-refresh": "^0.14.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
-    "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-middleware": "^5.3.3",
-    "webpack-dev-server": "^4.9.3",
-    "webpack-hot-middleware": "^2.25.1",
-    "webpack-merge": "^5.8.0"
+    "webpack-dev-server": "^4.9.3"
   }
 }
