--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/floatingtales/disaster-and-dragons#readme",
   "dependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
