--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "html-webpack-plugin": "^5.5.0",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mini-css-extract-plugin": "^2.6.1",
     "mongoose": "^6.4.4",
