--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/material": "^5.9.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "bcrypt": "^5.0.1",
+    "canvas": "^2.9.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
