--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^6.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "socket.io": "^4.5.1",
     "webpack": "^5.73.0",
     "webpack-dev-middleware": "^5.3.3",
     "webpack-hot-middleware": "^2.25.1",
