configured eslint for jsx extensions

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,14 @@
   },
   "plugins": ["react"],
   "rules": {
-    "no-console": 0
+    "no-console": 0,
+    "import/extensions": [
+      "error",
+      {
+        "pattern": {
+          "jsx": "always"
+        }
+      }
+    ]
   }
 }
