--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
   },
   "plugins": ["react"],
   "rules": {
+    "max-len": 0,
     "no-console": 0,
     "import/extensions": [
       "error",
@@ -22,6 +23,7 @@
           "jsx": "always"
         }
       }
-    ]
+    ],
+    "react/prop-types": 0
   }
 }
